--- a/Makefile.in
+++ b/Makefile.in
@@ -196,7 +196,7 @@ dist_bin_SCRIPTS = scripts/cddb_fetch.pl scripts/importcd \
 EXTRA_DIST = package
 targetdir = target
 artifactdir = $(targetdir)/$(distdir)
-sourcerepodir = $(DEV_SERVER):/var/www/repo/source/
+sourcerepodir = $(DEV_SERVER):/var/www/repo/source
 archrepodir = $(DEV_SERVER):/var/www/repo/arch
 debianrepodir = $(DEV_SERVER):/var/www/repo/debian/incoming
 DEV_SERVER = george@dev.darknugget.com
@@ -570,11 +570,11 @@ uninstall-am: uninstall-dist_binSCRIPTS
 deploy-source: dist
 	$(RSYNC) $(DIST_ARCHIVES) $(sourcerepodir)
 
-deploy-arch: dist-arch deploy
+deploy-arch: dist-arch
 	$(RSYNC) $(ARCH_TARBALL) $(archrepodir)
 
 deploy-debian: dist-debian
-	$(RSYNC) $(builddir)/*.deb $(debianrepodir)
+	$(RSYNC) $(targetdir)/*.{deb,dsc,gz,changes} $(debianrepodir)
 	debarchiver -o --autoscanall
 
 dist-arch: $(ARCH_TARBALL)
@@ -585,7 +585,7 @@ $(ARCH_TARBALL): dist
 	$(INSTALL) -d $(artifactdir)
 	cp package/arch/PKGBUILD $(artifactdir)
 	sed -i "2a \
-	    md5sums('$(shell $(MD5_PROGRAM) $(DIST_ARCHIVES) | \
+	    md5sums=('$(shell $(MD5_PROGRAM) $(DIST_ARCHIVES) | \
 	    awk '{print $$1}')')" $(artifactdir)/PKGBUILD
 	sed -i "2a \
 	    pkgver=$(PACKAGE_VERSION)" $(artifactdir)/PKGBUILD
