Added prefix to allow building in separate directory

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,19 +1,27 @@
-dist_bin_SCRIPTS = scripts/cddb_fetch.pl scripts/importcd \
-		   scripts/listflactags scripts/quickInfo.py \
-		   scripts/refreshflactags scripts/setflactags.py \
-		   scripts/setoggtags.py scripts/stripflactags \
-		   scripts/syncoggs scripts/tracknames.py
-EXTRA_DIST = package
+dist_bin_SCRIPTS ::= \
+    $(srcdir)/scripts/cddb_fetch.pl \
+    $(srcdir)/scripts/importcd \
+    $(srcdir)/scripts/listflactags \
+    $(srcdir)/scripts/quickInfo.py \
+    $(srcdir)/scripts/refreshflactags \
+    $(srcdir)/scripts/setflactags.py \
+    $(srcdir)/scripts/setoggtags.py \
+    $(srcdir)/scripts/stripflactags \
+    $(srcdir)/scripts/syncoggs \
+    $(srcdir)/scripts/tracknames.py
 
-targetdir = target
-artifactdir = $(targetdir)/$(distdir)
-sourcerepodir = $(DEV_SERVER):/var/www/repo/source
-archrepodir = $(DEV_SERVER):/var/www/repo/arch
-debianrepodir = $(DEV_SERVER):/var/www/repo/debian/incoming
+EXTRA_DIST ::= $(srcdir)/package
 
-DEV_SERVER = george@dev.darknugget.com
-ARCH_TARBALL = $(distdir)-arch.tar.gz
-DEB_FILE = $(targetdir)/$(PACKAGE_TARNAME)_$(PACKAGE_VERSION)-1_all.deb
+DEV_SERVER ::= george@dev.darknugget.com
+
+targetdir ::= target
+artifactdir ::= $(targetdir)/$(distdir)
+sourcerepodir ::= $(DEV_SERVER):/var/www/repo/source
+archrepodir ::= $(DEV_SERVER):/var/www/repo/arch
+debianrepodir ::= $(DEV_SERVER):/var/www/repo/debian/incoming
+
+ARCH_TARBALL ::= $(distdir)-arch.tar.gz
+DEB_FILE ::= $(targetdir)/$(PACKAGE_TARNAME)_$(PACKAGE_VERSION)-1_all.deb
 
 deploy-source: dist
 	$(RSYNC) $(DIST_ARCHIVES) $(sourcerepodir)
